Fix float issue in header on tablets.

--- a/sass/_custom-styles.scss
+++ b/sass/_custom-styles.scss
@@ -60,7 +60,7 @@ a {
       float: left;
       margin-top: 19px;
       margin-left: 2 * $grid-gutter-width;
-      width: 400px;
+      width: 300px;
     }
     #logo-85th {
       float: right;
