--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -156,7 +156,7 @@ a:visited {
     float: left;
     margin-top: 19px;
     margin-left: 60px;
-    width: 400px;
+    width: 300px;
   }
   /* line 65, ../sass/_custom-styles.scss */
   #header #logo-85th {
